# mezon

./: .editorconfig  .eslintignore  .eslintrc.json  .gitleaks.toml  .prettierignore  .prettierrc  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  package.json  tsconfig.base.json
.github/workflows/: automation_validation_dev.yml  deploy_fe_dev.yml  deploy_fe_prod.yml  desktop-rs.yml  gitleaks-scan.yml  post-merge-automation-allure.yml  pr-automation-test.yml  release-arm-linux.yml  release-arm-macos.yml  release-windows.yml
apps/admin/: .env  tsconfig.app.json  webpack.config.js
apps/admin/src/: index.html  styles.scss
apps/admin/src/app/: app.tsx
apps/admin/src/app/components/: ActivityOverview.tsx  CollapseSideBar.tsx  Header.tsx  Pagination.tsx  SingleLineChart.tsx  TabButton.tsx
apps/admin/src/app/layouts/: AppLayout.tsx  RootLayout.tsx
apps/admin/src/app/loader/: appLoader.ts
apps/admin/src/app/routes/: InititalRoutes.tsx  index.tsx
apps/chat/: .babelrc  .env  jest.config.ts  project.json  proxy.conf.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  webpack.config.js
apps/chat/src/: index.html  main.tsx  mezon-js-protobuf.d.ts  styles.scss  vite-env.d.ts
apps/chat/src/app/: app.tsx
apps/chat/src/app/hooks/: useNotificationManagement.ts
apps/chat/src/app/layouts/: AppLayout.tsx  ChannelLayout.tsx  ClanLayout.tsx  MacWindowsControl.tsx  MainLayout.tsx  ReactionEmojiPanel.tsx
apps/chat/src/app/loaders/: appLoader.ts  authLoader.ts  canvasLoader.ts  channelLoader.ts  clanLoader.ts  directLoader.ts  directMessageLoader.ts  externalLoader.ts
apps/chat/src/app/routes/: ErrorRoutes.tsx  ProtectedRoutes.tsx  index.tsx
apps/chat/src/app/styles/: commonStyles.ts
apps/chat/src/app/utils/: clipboard.ts
apps/chat/src/assets/: site.webmanifest
apps/chat/src/instrument/: instrument.ts
apps/chat/src/styles/: theme-base.css  tooltip.css
apps/desktop/: index.html  package.json  project.json  tsconfig.app.json  webpack.config.js
apps/desktop-rs/: .gitignore  Cargo.toml  MIGRATION_PLAN.md  rust-toolchain.toml
apps/desktop-rs/.cargo/: config.toml
apps/desktop-rs/crates/mezon-app/: Cargo.toml  Info.plist
apps/desktop-rs/crates/mezon-app/src/: main.rs
apps/desktop-rs/crates/mezon-client/: Cargo.toml
apps/desktop-rs/crates/mezon-client/src/: auth.rs  keychain.rs  lib.rs  session.rs
apps/desktop-rs/crates/mezon-native/: Cargo.toml
apps/desktop-rs/crates/mezon-native/src/: autostart.rs  badge.rs  deep_link.rs  instance.rs  lib.rs  notifications.rs  power.rs  tray.rs
apps/desktop-rs/crates/mezon-proto/: Cargo.toml
apps/desktop-rs/crates/mezon-proto/src/: lib.rs
apps/desktop-rs/crates/mezon-store/: Cargo.toml
apps/desktop-rs/crates/mezon-store/src/: lib.rs
apps/desktop-rs/crates/mezon-ui/: Cargo.toml
apps/desktop-rs/crates/mezon-ui/src/: lib.rs  login_view.rs  root.rs  theme.rs  title_bar.rs
apps/desktop-rs/crates/mezon-ui/src/components/: mod.rs
apps/desktop-rs/crates/mezon-ui/src/components/compositions/: empty_state.rs  form_field.rs  icon_button.rs  mod.rs  section_header.rs  status_dot.rs  user_chip.rs
apps/desktop-rs/crates/mezon-ui/src/components/primitives/: avatar.rs  badge.rs  button.rs  divider.rs  icon.rs  label.rs  mod.rs  spinner.rs  text_input.rs
apps/desktop-rs/crates/mezon-updater/: Cargo.toml
apps/desktop-rs/crates/mezon-updater/src/: lib.rs
apps/desktop/src/: Tray.ts  main.ts
apps/desktop/src/app/: app.ts  autoUpdates.ts  protocolInterceptor.ts  requestPermission.ts
apps/desktop/src/assets/: entitlements.mac.plist
apps/discover/: project.json  tsconfig.app.json  vite.config.ts  webpack.config.js
apps/discover/src/: index.html  styles.scss
apps/discover/src/app/: app.tsx
apps/mobile/: .env  package.json  selection.json
apps/mobile-deprecated/: Gemfile  package.json  selection.json
apps/mobile-deprecated/android/: build.gradle  gradle.properties
apps/mobile-deprecated/android/app/: build.gradle
apps/mobile-deprecated/ios/: BadgeModule.swift  FastNativeImageViewManager.swift  Podfile  VideoPlayerManager.m  VideoPlayerView.swift
apps/mobile-deprecated/ios/NotificationService/: NotificationService.swift
apps/mobile-deprecated/patches/: react-native-gzip+1.1.0.patch  react-native-safe-area-context+5.5.2.patch
apps/mobile/android/app/: build.gradle
apps/mobile/ios/: AppDelegate.swift  BadgeModule.m  FastNativeImageView.swift  FastNativeImageViewManager.m  FastNativeImageViewManager.swift  ImageClipboardModule.m  ImageClipboardModule.swift  Mobile-Bridging-Header.h  NativeVideoPlayerView.swift  Podfile  URLSessionClient.m  URLSessionClient.swift  VideoPlayerManager.swift  VideoPlayerView.swift  VideoThumbnailModule.m  VideoThumbnailModule.swift  VoIPManager.m  VoIPManager.swift
apps/mobile/ios/MezonSharing/: Info.plist  ShareViewController.swift
apps/mobile/ios/Mobile/: Info.plist
apps/mobile/ios/Mobile.xcodeproj/: project.pbxproj
apps/mobile/ios/NotificationService/: NotificationService.swift
apps/mobile/patches/: react-native-audio-recorder-player+4.5.0.patch  react-native-receive-sharing-intent+2.0.0.patch  react-native-track-player+4.1.2.patch  react-native-view-shot+4.0.3.patch
apps/mobile/src/: main.tsx
apps/mobile/src/assets/: Images.ts
docs/developer/: SECURITY.md
libs/chat-scroll/: .babelrc
libs/chat-scroll/src/lib/: types.ts
libs/components/: package.json  tsconfig.lib.json
libs/components/src/: index.ts
libs/components/src/lib/: components.tsx
libs/core/src/: index.ts
libs/logger/: tsconfig.json
libs/logger/src/lib/: logger.ts
libs/store/src/: index-mobile.ts  index.ts
libs/store/src/lib/: cache-metadata.ts  helpers.ts  store-mobile.tsx  store.tsx
libs/themes/src/lib/: ThemeManager.ts
libs/translations/: .babelrc  project.json
libs/translations/src/: i18n.config.ts  index.ts
libs/translations/src/languages/: index.ts
libs/transport/src/: index.ts
libs/transport/src/lib/: network.ts  socketState.ts
libs/ui/src/: index.ts
libs/utils/: tsconfig.lib.json
libs/utils/src/: index.ts
scripts/: merge-develop.sh
(+2548 files in other folders)
