[package]
name = "mezon-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mezon"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "da25b914c25f17ba457abc8cf75b8e42d0b899e2" }
mezon-ui.workspace = true
mezon-store.workspace = true
mezon-native.workspace = true
mezon-updater.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
