[package]
name = "mezon-client"
version.workspace = true
edition.workspace = true

[dependencies]
mezon-proto.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
prost.workspace = true
