[package]
name = "mezon-client"
version.workspace = true
edition = "2024"

[dependencies]
mezon-proto.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
http_client.workspace = true
reqwest_client.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
prost.workspace = true
keyring.workspace = true
base64.workspace = true
url.workspace = true
