[package]
name = "mezon-native"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
open = "5"
dirs = { workspace = true }
tray-icon = { version = "0.19", features = ["common-controls-v6"] }
image = { workspace = true }
auto-launch = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
] }
